UtahLiveDataTest/src/objects/AWS_Keys__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>AWS_Keys</description>
    <fields>
        <fullName>AWS_AccessKey_Id__c</fullName>
        <label>AWS_AccessKey_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Secret_Key__c</fullName>
        <label>AWS_Secret_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_URL__c</fullName>
        <label>AWS_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket_Name__c</fullName>
        <label>Bucket Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENV__c</fullName>
        <label>ENV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AWS_Keys</label>
</CustomObject>